--- a/index.html
+++ b/index.html
@@ -9,21 +9,6 @@
     <title>Presentación Personal</title>
 </head>
 <body>
-    <header>
-        <h1>Presentación Personal</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="">1</a></li>
-            <li><a href="">2</a></li>
-            <li><a href="">3</a></li>
-        </ul>
-    </nav>
-    <main>
-        a
-    </main>
-    <footer>
-        a
-    </footer>
+   Prueba 01
 </body>
 </html>
