--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Presentación Miguel Suárez Sanz</title>
 </head>
 <body>
-    <a href="./miguelsuarezsanz.github.io/Pagina de Auto Presentación/CV/PAMcv.html">Empieza</a>
+    <a href="./Pagina de Auto Presentación/CV/PAMcv.html">Empieza</a>
 </body>
 </html>
