--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Presentación Miguel Suárez Sanz</title>
 </head>
 <body>
-    <a href="./Pagina de Auto Presentación/CV/PAMcv.html">Empieza</a>
+    <a href="./Pagina de Auto Presentación/CV/PAMcv.html">
+        <p>Pulsa</p>
+        <p>Aqui</p>
+    </a>
 </body>
 </html>
