--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>Presentación Miguel Suárez Sanz</title>
 </head>
 <body>
-    <a href="./Pagina de Auto Presentación/CV/PAMcv.html">
-        <p>Pulsa</p>
-        <p>Aqui</p>
-    </a>
+    <div>
+        <a href="./Pagina de Auto Presentación/CV/PAMcv.html">
+            <p>Pulsa</p>
+            <p>Aqui</p>
+        </a>
+    </div>
 </body>
 </html>
