--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Presentación Miguel Suárez Sanz</title>
 </head>
 <body>
-    <a href="./miguelsuarezsanz.github.io/Pagina de Auto Presentación/CV/PAMcv.html"><img
+    <a href="./Pagina de Auto Presentación/CV/PAMcv.html"><img
         src="https://josmorbor.neocities.org/img/boton_inicio.png"
         alt="Error IMGYT.png"></a>
 </body>
